--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
 	"compilerOptions": {
 		"target": "es5",
+		"lib": [
+            "es5",
+            "dom",
+            "es2015.promise"
+        ],
 		"declaration": true,
 		"outFile": "bin/uulib.js"
 	},
